# pepperoni

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  config.toml  peer1.toml  peer2.toml  todo.md
src/: config.cpp  config.hpp  connection_table.hpp  error.hpp  events.hpp  frontend.cpp  frontend.hpp  main.cpp  message.hpp  msg.hpp  peer_listener.hpp  peer_session.hpp  peer_table.hpp  utils.hpp
